--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     compile files('libs/locSDK_6.13.jar')
     compile files('libs/baidumapapi_map_v3_7_3.jar')
     compile files('libs/baidumapapi_util_v3_7_3.jar')
-    compile project(':IMKit')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -55,3 +54,7 @@ dependencies {
 }
 
 }
+dependencies {
+    compile project(':IMKit')
+}
+
