--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+    compileOptions{
+        encoding "UTF-8"
+    }
 
     defaultConfig {
         applicationId "com.didiincubator"
