--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -43,14 +43,16 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="ardzoEhWqvU4FC3DED6pskYIZosERFPm"/>
+            android:value="QSVjf7HZ30K86EXac0Iv2NDwGXwEN1kB"/>
 
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote"/>
 
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.MainActivity"
+            android:launchMode="singleTask"
+            >
 
         </activity>
         <activity android:name=".View.DetailActivity">
@@ -72,6 +74,7 @@
         <activity android:name=".Activity.SetActivity">
         </activity>
         <activity
+
             android:name=".View.ConversationActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
