历史记录，数据获取

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
         </activity>
         <activity android:name=".Activity.DataActivity">
         </activity>
-        <activity android:name=".Activity.HistoryActivity">
+        <activity android:name=".View.HistoryActivity">
         </activity>
         <activity android:name=".Activity.MessageActivity">
         </activity>
