--- a/build.gradle
+++ b/build.gradle
@@ -59,15 +59,9 @@ android {
 }
 
 dependencies {
-<<<<<<< HEAD
-=======
-
->>>>>>> fc187efa990c4452ceb077917b97b62b249b3a82
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.yolanda.nohttp:nohttp:1.0.0'
     compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
-
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile files('libs/baidumapapi_base_v3_7_3.jar')
@@ -95,6 +89,8 @@ dependencies {
     compile files('libs/MobTools-2016.0303.1229.jar')
     compile name: 'SMSSDK-2.0.2', ext: 'aar'
     compile name: 'SMSSDKGUI-2.0.2', ext: 'aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 
