--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.didiincubator">
+    package="com.didiincubator">
 
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <!-- 这个权限用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- 这个权限用于访问GPS定位 -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <!-- 用于读取手机当前的状态 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 访问网络，网络定位需要上网 -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- SD卡读取权限，用户写入离线定位数据 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <!-- Mob权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -43,57 +43,45 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="QSVjf7HZ30K86EXac0Iv2NDwGXwEN1kB"/>
+            android:value="QSVjf7HZ30K86EXac0Iv2NDwGXwEN1kB" />
 
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"/>
+            android:process=":remote" />
 
-        <activity android:name=".Activity.MainActivity"
-            android:launchMode="singleTask"
-            >
-
-        </activity>
-        <activity android:name=".View.DetailActivity">
-        </activity>
-        <activity android:name=".View.ApplyActivity">
-        </activity>
-        <activity android:name=".View.MyApplyActivity">
-        </activity>
-        <activity android:name=".Activity.AboutActivity">
-        </activity>
-        <activity android:name=".Activity.CollectionActivity">
-        </activity>
-        <activity android:name=".Activity.DataActivity">
-        </activity>
-        <activity android:name=".View.HistoryActivity">
-        </activity>
-        <activity android:name=".Activity.MessageActivity">
-        </activity>
-        <activity android:name=".Activity.SetActivity">
-        </activity>
         <activity
-
+            android:name=".Activity.MainActivity"
+            android:launchMode="singleTask"></activity>
+        <activity android:name=".View.DetailActivity"></activity>
+        <activity android:name=".View.ApplyActivity"></activity>
+        <activity android:name=".View.MyApplyActivity"></activity>
+        <activity android:name=".Activity.AboutActivity"></activity>
+        <activity android:name=".Activity.CollectionActivity"></activity>
+        <activity android:name=".Activity.DataActivity"></activity>
+        <activity android:name=".View.HistoryActivity"></activity>
+        <activity android:name=".Activity.MessageActivity"></activity>
+        <activity android:name=".Activity.SetActivity"></activity>
+        <activity
             android:name=".View.ConversationActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
 
                 <data
                     android:host="com.didiincubator"
                     android:pathPrefix="/conversation/"
-                    android:scheme="rong"/>
+                    android:scheme="rong" />
             </intent-filter>
         </activity>
         <activity android:name=".Activity.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -137,10 +125,11 @@
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="573c0eb267e58e4b24003142" />
+
         <activity
             android:name=".Activity.ZhuCeActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".Activity.FuwuxieyiActivity"></activity>
+        <activity android:name=".Activity.FuwuxieyiActivity" />
     </application>
 
 </manifest>
